Fix for vm scrollbar bug.

--- a/src/global.scss
+++ b/src/global.scss
@@ -67,6 +67,7 @@ body {
 	margin: 0px;
 	width: 100%;
 	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 h2,
